# pyrregular

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/pyrregular/: accessor.html  backend.html  conversion_utils.html  data_utils.html  describe.html  io_utils.html  reader_interface.html  repository.html  uea_ucr_datasets.html
_sources/api/: index.rst.txt
_sources/notebooks/: dataset_conversion.ipynb.txt
api/: index.html
api/_autosummary/: pyrregular.accessor.html  pyrregular.backend.html  pyrregular.conversion_utils.html  pyrregular.data_utils.html  pyrregular.datasets.abf.html  pyrregular.datasets.ais.html  pyrregular.datasets.animals.html  pyrregular.datasets.combined_trajectories.html  pyrregular.datasets.garment.html  pyrregular.datasets.geolife.html  pyrregular.datasets.geolife_supervised.html  pyrregular.datasets.html  pyrregular.datasets.ldfpa.html  pyrregular.datasets.mimic3.html  pyrregular.datasets.pamap2.html  pyrregular.datasets.physionet2012.html  pyrregular.datasets.physionet2019.html  pyrregular.datasets.seabirds.html  pyrregular.datasets.taxi.html  (+28 more)
docs/: conf.py
notebooks/: dataset_conversion.html  dataset_conversion.ipynb  precommit_test.py  quick_start.html  quick_start.ipynb
pyrregular/: __init__.py  accessor.py  conversion_utils.py  data_utils.py  io_utils.py  reader_interface.py  repository.py
tests/: test_dataset_loading.py
(+64 files in other folders)
