[metadata]
name = pyrregular
author = Francesco Spinnato, Cristiano Landi
author_email = francesco.spinnato@di.unipi.it

[options]
packages = find:

install_requires =
    awkward
    numpy
    pandas
    xarray
    sparse<=0.15.4
    h5py
    pyarrow
    pooch
    tqdm
    scikit-learn
python_requires = >= 3.9

[options.extras_require]
dev =
    black
    mypy
    pre-commit
    pytest
    pytest-cov
docs =
    sphinx>=6.0
    myst-parser
    nbsphinx
    sphinx-autodoc-typehints
    sphinxcontrib-napoleon
    ipykernel
    nbconvert
test =
    pytest
    pytest-cov
notebooks =
    notebook
models =
    lightgbm
    sktime
    aeon
    tslearn
    pypots
    jax
    equinox
    optax
    diffrax

[options.package_data]
pyrregular = registry.txt

[options.entry_points]
xarray.backends =
    pyrregular = pyrregular.backend:IrregularEntrypoint